# SaMac

./: .travis.yml  CMakeLists.txt  Doxyfile
Documentations/html/: _r_e_a_d_m_e_8md_source.html  _s_a_s_e_lib_8cpp_source.html  _s_a_s_e_lib_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_sa_s_e_linux-members.html  class_sa_s_e_linux.html  class_sa_s_e_linux.js  classes.html  dir_6e6cb9563333489fde7459b1f95e59a5.html  dir_6e6cb9563333489fde7459b1f95e59a5.js  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_937900b87e0c7a5fa01190c395fb83f7.js  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  main_8cpp_source.html  mainwindow_8cpp_source.html  mainwindow_8h_source.html  md__sources__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
Documentations/html/search/: all_1.js  classes_1.js  functions_0.js  pages_0.js  search.css  searchdata.js
Documentations/latex/: annotated.tex  class_main_window.tex  class_sa_s_e_linux.tex  hierarchy.tex  refman.tex
Documentations/man/man3/: MainWindow.3  SaSELinux.3  md__sources__r_e_a_d_m_e.3
Libs/: CMakeLists.txt  SASELib.cpp  SASELib.h
Sources/: CMakeLists.txt  README.md  main.cpp
